story section fix overflow

--- a/assets/scss/pages/story.scss
+++ b/assets/scss/pages/story.scss
@@ -100,7 +100,7 @@
   position: relative;
   display: flex;
   justify-content: center;
-  padding-top: 100px;
+  padding-top: 300px;
   padding-bottom: 100px;
 
   @media screen and (max-width: 991.98px) {
@@ -334,8 +334,12 @@
       line-height: 2;
       font-size: 17px;
 
-      @media screen and (max-width: 991.98px) {
-        font-size: 14px;
+      @media screen and (max-width: 1399.98px) {
+        font-size: 16px;
+      }
+
+      @media screen and (max-width: 1199.98px) {
+        font-size: 14.5px;
       }
     }
   }
